@@ -19,6 +19,12 @@
          receive WebDAV source responses to GET requests.
        </description>
      </key>
+     <key name="fast_listen" datatype="boolean" default="on">
+       <description>
+         Defines wether the http server should listen to requests immediatelly
+         or only after zope is ready to run
+       </description>
+     </key>
      <key name="use-wsgi" datatype="boolean" default="off" />
   </sectiontype>
 
